add beginning structuring of calculator function in .js file.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <title>Ping Pong</title>
   </head>
   <body>
+    <h1>Several Random Things</h1>
     <form id="ping-pong-form">
-      <label for="goal">Enter a number:</label>
+      <label for="goal">Enter a number for Ping-Pong:</label>
       <input id="goal" type="number">
       <button type="submit">Submit</button>
     </form>
+    <br> <br>
+    <hr>
+    <br> <br>
+    <form class="calculate">
+      <label for="first-number">Enter a number</label>
+      <input type="number" name="first-number"> <br>
+      <input type="radio" id="add-symbol" name="math-symbol" value="add"> + <br>
+      <input type="radio" id="subtract-symbol" name="math-symbol" value="subtract"> - <br>
+      <input type="radio" id="multiply-symbol" name="math-symbol" value="multiply"> * <br>
+      <input type="radio" id="divide-symbol" name="math-symbol" value="divide"> / <br>
+      <label for="second-number">Enter another number</label>
+      <input type="number" name="first-number">
+    </form>
+    <br> <br>
+    <hr>
+    <br> <br>
     <form id="signup">
       <label for="email">Enter your email:</label>
       <input id="email" type="text">
