Add function to calculator forms with connection of backend front end - and new calculator-front-end file. MAKE SURE! to guild build to recompile code.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <br> <br>
     <hr>
     <br> <br>
+    <h1>Here is an arithmetic calculator</h1>
     <form class="calculate">
       <label for="first-number">Enter a number</label>
-      <input type="number" name="first-number"> <br>
+      <input type="number" id="first-number" name="first-number"> <br>
       <input type="radio" id="add-symbol" name="math-symbol" value="add"> + <br>
       <input type="radio" id="subtract-symbol" name="math-symbol" value="subtract"> - <br>
       <input type="radio" id="multiply-symbol" name="math-symbol" value="multiply"> * <br>
       <input type="radio" id="divide-symbol" name="math-symbol" value="divide"> / <br>
       <label for="second-number">Enter another number</label>
-      <input type="number" name="first-number">
+      <input type="number" id="second-number" name="second-number">
+      <button type="submit"> Calculate! </button>
     </form>
+    <p id="math-result">the answer shpou;ld be here.
+    </p>
     <br> <br>
     <hr>
     <br> <br>
