--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
     <br> <br>
     <hr>
     <br> <br>
+
     <form id="signup">
       <label for="email">Enter your email:</label>
       <input id="email" type="text">
       <button type="submit">Submit</button>
     </form>
     <ul id="solution"></ul>
+
     <h3>Well look at the time</h3>
     <h3 id="time"></h3>
+
+    <a href="weather.html">Click for the weather...</a>
+    
+
   </body>
 </html>
