--- a/index.html
+++ b/index.html
@@ -24,8 +24,39 @@
         <option>BURGLARY - RESIDENTIAL, UNOCCUPIED</option>
         <option>LIQUOR VIOLATION - ADULT</option>
       </select>
-      <button class="btn-success" id="getCrimes">Get 911 Calls!</button>
     </div>
+    <div class="form-group">
+      <label for="district">Choose District/Sector</label>
+      <select required class="form-control" id="district">
+        <option value="" disabled selected></option>
+        <option>99</option>
+        <option>B</option>
+        <option>C</option>
+        <option>D</option>
+        <option>E</option>
+        <option>F</option>
+        <option>G</option>
+        <option>H</option>
+        <option>J</option>
+        <option>K</option>
+        <option>L</option>
+        <option>M</option>
+        <option>N</option>
+        <option>O</option>
+        <option>Q</option>
+        <option>R</option>
+        <option>S</option>
+        <option>U</option>
+        <option>W</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="first-date">Between</label>
+      <input type="date" name="first-date" id="first-date">
+      <label for="second-date">And</label>
+      <input type="date" name="second-date" id="second-date">
+    </div>
+    <button class="btn-success" id="getCrimes">Get 911 Calls!</button>
   </div>
   <h3>My Google Maps Demo</h3>
   <div id="map"></div>
