get date range working because includes final quotes at end of query string.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="build/js/vendor.min.js"></script>
   <script type="text/javascript" src="build/js/app.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYHE_eB1vpFRnsj1kqvEtTP87whcv8Pow"></script>
+  <!-- <script type="text/javascript" src="canvasjs.min.js"></script> -->
   <title>911 Seattle</title>
 </head>
 
