add janky chart stuff just to get a chart with random data to display.

--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
       <label for="second-date">And</label>
       <input type="date" name="second-date" id="second-date">
     </div>
-    <button class="btn-success" id="get-crimes">Get 911 Calls!</button>
+    <button class="btn-success" id="get-crimes">Get 911 Calls Map!</button>
+    <button class="btn-success" id="get-chart">Get 911 Calls Chart!</button>
   </div>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-7">
       <h3>My Google Maps Demo</h3>
       <div id="map"></div>
     </div>
-    <div class="col-md-4">
-      <h3>My Google Maps Demo</h3>
-      <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+    <div class="col-md-5">
+      <h3>My Charts Demo</h3>
+      <div id="chartContainer" style="height: 500px; width: 100%;"></div>
     </div>
   </div>
 
